Fix spacing of inro paragraph

--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -23,6 +23,7 @@ h1 {
     text-align: center;
     margin: 0 auto;
     color: white;
+    padding: 25px 0;
 }
 
 table, td {
